		repos_free_dump to dump objects not freed.

2010-01-04
	* libm2skernel/syscall.c: system call fcntl64 with cmd=3 (F_GETFL)
		implemented.
	* libm2skernel/syscall.c: system call 'utime' implemented.
	* libm2skernel/syscall.c: system call 'chmod' implemented.
	* libm2skernel/syscall.c: system call 'chown' implemented.
	* With these system calls, the Mediabench suite is supported.

2010-01-05
	* libm2skernel/m2skernel.h: global variable 'mem_max_mapped_space',
		representing the maximum allocated physical memory for
		benchmarks.
	* m2s-fast.c: stat names changed. Stat 'sim.memory' and
		'sim.memory_max' added.
	* processor.c: stats 'sim.memory' and 'sim.memory_max' added.

2010-01-06
	* m2s-cache, m2s-bpred, m2s-network: removed.

2010-01-08
	* libcachesystem: stat 'cache.hits' added, to avoid the hitratio
		inaccuracy.
	* queues.c, m2s.h, ...: LQ and SQ queues unified into LSQ. Para-
		meters 'lq_size' and 'sq_size' are unified into
		'lsq_size'.

2010-01-11
	* libdisasm/machine.dat: inst mov_r16_rm16 added.
	* libm2skernel/syscall.c: system call 'rename' implemented.
	* libm2skernel/syscall.c: system call 'setrlimit' with RLIMIT_STACK
		implemented.

2010-01-12
	* libm2skernel/syscall.c: system call 'setrlimit' ignored again.
	* libcachesystem/moesi.c: debug information for access retries.

2010-01-14
	* libm2skernel/uop1.dat, uop2.dat: uops load_esi, load_edi, load_moffs
		deleted. The same with stores. Number of odeps for uops changed
		to 4, and those uops with 5 uops have been changed.

2010-01-15
	* libstruct, libmisc, ptrace: function calls to 'fgets' changed to
		capture the return value and avoid warnings in some gcc versions.

2010-02-06
	* fetch.c: bug fixed. Sequence number of macroinstruction (uop->mop_seq)
		was not correctly assigned.
	* m2s.h: field uop->di_seq added, for dispatch sequence numbers.
	* writeback.c: bug fixes when recovering from mispeculation. The condition
		to call 'p_recover' has been changed.