@@ -62,9 +62,9 @@ void writeback_core(int core)
 			recover = 1;
 
 		/* Debug */
-		esim_debug("uop action=\"update\", seq=%llu, stg_writeback=1,"
-			"completed=1\n",
-			(long long unsigned) uop->di_seq);
+		esim_debug("uop action=\"update\", core=%d, seq=%llu,"
+			" stg_writeback=1, completed=1\n",
+			uop->core, (long long unsigned) uop->di_seq);
 
 		/* Writeback */
 		uop->completed = 1;
